; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_search.c___prelude_cb_hit.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_search.c___prelude_cb_hit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"anal.depth\00", align 1
@R_ANAL_REF_TYPE_NULL = common dso_local global i32 0, align 4
@preludecnt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @__prelude_cb_hit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__prelude_cb_hit(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %10, %struct.TYPE_3__** %7, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @r_config_get_i(i32 %13, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32 %14, i32* %8, align 4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @R_ANAL_REF_TYPE_NULL, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @r_core_anal_fcn(%struct.TYPE_3__* %15, i32 %16, i32 -1, i32 %17, i32 %18)
  %20 = load i32, i32* @preludecnt, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* @preludecnt, align 4
  ret i32 1
}

declare dso_local i32 @r_config_get_i(i32, i8*) #1

declare dso_local i32 @r_core_anal_fcn(%struct.TYPE_3__*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
